tests/characterization/snapshots/characterization__manager_env__no_metadata.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: .metadata not found.
This directory is not an OQTOPUS manager environment.
--- end ---
