tests/characterization/snapshots/characterization__manager_env__wrong_template.snap
---
source: tests/characterization/main.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid environment template. Found template='backend', but 'oqtopus manager' requires template='manager'.
--- end ---
